langfuse/ingress-langfuse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-langfuse
  namespace: langfuse
spec:
  ingressClassName: nginx
  rules:
  - host: sample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: langfuse
            port:
              number: 3000
  tls:
  - hosts:
    - sample.com
    secretName: tls-langfuse
